syntax = "proto3";

option go_package = "./pb";

package auth;

service AuthService {
	rpc Login (LoginRequest) returns (LoginResponse);
	rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
	rpc Logout (LogoutRequest) returns (LogoutResponse);
}

message LoginRequest {
	string code = 1;
}

message LoginResponse {
	string access_token = 1;
}

message ValidateTokenRequest {
}

message ValidateTokenResponse {
	string user_id = 1;
}

message LogoutRequest {
}

message LogoutResponse {
}